--- a/DrHomeBackend/Dr-Home/Dr-Home.csproj
+++ b/DrHomeBackend/Dr-Home/Dr-Home.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Dr_Home</RootNamespace>
     <UserSecretsId>01d8c425-c1f4-4fdf-9617-30723da7c2e4</UserSecretsId>
+	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DTOs\SchedulesDTOs\SchedulesValidators\" />
     <Folder Include="wwwroot\Pictures\" />
   </ItemGroup>
 
