--- a/DrHomeBackend/Dr-Home/Dr-Home.csproj
+++ b/DrHomeBackend/Dr-Home/Dr-Home.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -37,7 +37,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\SchedulesDTOs\SchedulesValidators\" />
     <Folder Include="wwwroot\Pictures\" />
   </ItemGroup>
 
