--- a/DrHomeBackend/Dr-Home/Dr-Home.csproj
+++ b/DrHomeBackend/Dr-Home/Dr-Home.csproj
@@ -39,5 +39,10 @@
   <ItemGroup>
     <Folder Include="wwwroot\Pictures\" />
   </ItemGroup>
-
+	
+	<ItemGroup>
+		<Content Include="Templates\*.html">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 </Project>
